src/main/gen/io/greycat/language/parser/GreyCatParser.java
// This is a generated file. Not intended for manual editing.
package io.greycat.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static io.greycat.language.psi.GreyCatTypes.*;
import static io.greycat.language.parser.GreyCatParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class GreyCatParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return GreyCat(b, l + 1);
  }

  /* ********************************************************** */
  // Expression (COMMA Expression)*
  public static boolean Arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENTS, "<arguments>");
    r = Expression(b, l + 1);
    r = r && Arguments_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (COMMA Expression)*
  private static boolean Arguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Arguments_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Arguments_1", c)) break;
    }
    return true;
  }

  // COMMA Expression
  private static boolean Arguments_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // AT_KW LPAREN Expression RPAREN Block
  public static boolean AtStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AtStmt")) return false;
    if (!nextTokenIs(b, AT_KW)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, AT_KW, LPAREN);
    r = r && Expression(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    r = r && Block(b, l + 1);
    exit_section_(b, m, AT_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // IdentOrKeyword | STRING
  public static boolean AttrIdent(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttrIdent")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATTR_IDENT, "<attr ident>");
    r = IdentOrKeyword(b, l + 1);
    if (!r) r = consumeToken(b, STRING);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // BAR_BAR | QUESTION_QUESTION // or
  //     | AMP_AMP                   // and
  //     | EQ_EQ | NOT_EQ            // equality
  //     | LT | GT | LT_EQ | GT_EQ   // relative
  //     | PLUS | MINUS              // additive
  //     | STAR | SLASH | PERCENT    // multiplicative
  //     | CARET                     // power
  //     | EQ | QUESTION_EQ
  public static boolean BinOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinOp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BIN_OP, "<bin op>");
    r = consumeToken(b, BAR_BAR);
    if (!r) r = consumeToken(b, QUESTION_QUESTION);
    if (!r) r = consumeToken(b, AMP_AMP);
    if (!r) r = consumeToken(b, EQ_EQ);
    if (!r) r = consumeToken(b, NOT_EQ);
    if (!r) r = consumeToken(b, LT);
    if (!r) r = consumeToken(b, GT);
    if (!r) r = consumeToken(b, LT_EQ);
    if (!r) r = consumeToken(b, GT_EQ);
    if (!r) r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, STAR);
    if (!r) r = consumeToken(b, SLASH);
    if (!r) r = consumeToken(b, PERCENT);
    if (!r) r = consumeToken(b, CARET);
    if (!r) r = consumeToken(b, EQ);
    if (!r) r = consumeToken(b, QUESTION_EQ);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LCURLY Statement* RCURLY
  public static boolean Block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block")) return false;
    if (!nextTokenIs(b, LCURLY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LCURLY);
    r = r && Block_1(b, l + 1);
    r = r && consumeToken(b, RCURLY);
    exit_section_(b, m, BLOCK, r);
    return r;
  }

  // Statement*
  private static boolean Block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Block_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // Block SEMI?
  public static boolean BlockStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BlockStmt")) return false;
    if (!nextTokenIs(b, LCURLY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Block(b, l + 1);
    r = r && BlockStmt_1(b, l + 1);
    exit_section_(b, m, BLOCK_STMT, r);
    return r;
  }

  // SEMI?
  private static boolean BlockStmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BlockStmt_1")) return false;
    consumeToken(b, SEMI);
    return true;
  }

  /* ********************************************************** */
  // BREAK_KW SEMI
  public static boolean BreakStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BreakStmt")) return false;
    if (!nextTokenIs(b, BREAK_KW)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, BREAK_KW, SEMI);
    exit_section_(b, m, BREAK_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // 'bool'|'int'|'float'|'time'|'geo'|'duration'|'t2'|'t2f'|'t3'|'t3f'|'str'|'node'|'nodeTime'|'nodeGeo'|'nodeList'|'nodeIndex'
  public static boolean BuiltInType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BuiltInType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BUILT_IN_TYPE, "<built in type>");
    r = consumeToken(b, "bool");
    if (!r) r = consumeToken(b, "int");
    if (!r) r = consumeToken(b, "float");
    if (!r) r = consumeToken(b, "time");
    if (!r) r = consumeToken(b, "geo");
    if (!r) r = consumeToken(b, "duration");
    if (!r) r = consumeToken(b, "t2");
    if (!r) r = consumeToken(b, "t2f");
    if (!r) r = consumeToken(b, "t3");
    if (!r) r = consumeToken(b, "t3f");
    if (!r) r = consumeToken(b, "str");
    if (!r) r = consumeToken(b, "node");
    if (!r) r = consumeToken(b, "nodeTime");
    if (!r) r = consumeToken(b, "nodeGeo");
    if (!r) r = consumeToken(b, "nodeList");
    if (!r) r = consumeToken(b, "nodeIndex");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LPAREN Arguments? COMMA? RPAREN
  public static boolean CallArgs(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallArgs")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && CallArgs_1(b, l + 1);
    r = r && CallArgs_2(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, CALL_ARGS, r);
    return r;
  }

  // Arguments?
  private static boolean CallArgs_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallArgs_1")) return false;
    Arguments(b, l + 1);
    return true;
  }

  // COMMA?
  private static boolean CallArgs_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallArgs_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // PrimaryExpr CallExprSpec*
  public static boolean CallExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CALL_EXPR, "<call expr>");
    r = PrimaryExpr(b, l + 1);
    r = r && CallExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // CallExprSpec*
  private static boolean CallExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallExpr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CallExprSpec(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CallExpr_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // CallArgs | StaticAccess | PropAccess | OffsetAccess | NOT_NOT
  public static boolean CallExprSpec(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallExprSpec")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CALL_EXPR_SPEC, "<call expr spec>");
    r = CallArgs(b, l + 1);
    if (!r) r = StaticAccess(b, l + 1);
    if (!r) r = PropAccess(b, l + 1);
    if (!r) r = OffsetAccess(b, l + 1);
    if (!r) r = consumeToken(b, NOT_NOT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // CATCH_KW (LPAREN IDENTIFIER RPAREN)? Block
  public static boolean CatchStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CatchStmt")) return false;
    if (!nextTokenIs(b, CATCH_KW)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CATCH_KW);
    r = r && CatchStmt_1(b, l + 1);
    r = r && Block(b, l + 1);
    exit_section_(b, m, CATCH_STMT, r);
    return r;
  }

  // (LPAREN IDENTIFIER RPAREN)?
  private static boolean CatchStmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CatchStmt_1")) return false;
    CatchStmt_1_0(b, l + 1);
    return true;
  }

  // LPAREN IDENTIFIER RPAREN
  private static boolean CatchStmt_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CatchStmt_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LPAREN, IDENTIFIER, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CONTINUE_KW SEMI
  public static boolean ContinueStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ContinueStmt")) return false;
    if (!nextTokenIs(b, CONTINUE_KW)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CONTINUE_KW, SEMI);
    exit_section_(b, m, CONTINUE_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // DO_KW Block WHILE_KW LPAREN Expression RPAREN SEMI
  public static boolean DoWhileStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DoWhileStmt")) return false;
    if (!nextTokenIs(b, DO_KW)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DO_KW);
    r = r && Block(b, l + 1);
    r = r && consumeTokens(b, 0, WHILE_KW, LPAREN);
    r = r && Expression(b, l + 1);
    r = r && consumeTokens(b, 0, RPAREN, SEMI);
    exit_section_(b, m, DO_WHILE_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // ELSE_KW (Block | IfStmt)
  public static boolean ElseStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ElseStmt")) return false;
    if (!nextTokenIs(b, ELSE_KW)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ELSE_KW);
    r = r && ElseStmt_1(b, l + 1);
    exit_section_(b, m, ELSE_STMT, r);
    return r;
  }

  // Block | IfStmt
  private static boolean ElseStmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ElseStmt_1")) return false;
    boolean r;
    r = Block(b, l + 1);
    if (!r) r = IfStmt(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // SEMI
  public static boolean EmptyStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EmptyStmt")) return false;
    if (!nextTokenIs(b, SEMI)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SEMI);
    exit_section_(b, m, EMPTY_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // DOC_COMMENT* Pragmas? PRIVATE_KW? ENUM_KW EnumIdent LCURLY EnumField? ((SEMI | COMMA) EnumField)* (SEMI | COMMA)? RCURLY
  public static boolean EnumDecl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumDecl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENUM_DECL, "<enum decl>");
    r = EnumDecl_0(b, l + 1);
    r = r && EnumDecl_1(b, l + 1);
    r = r && EnumDecl_2(b, l + 1);
    r = r && consumeToken(b, ENUM_KW);
    r = r && EnumIdent(b, l + 1);
    r = r && consumeToken(b, LCURLY);
    r = r && EnumDecl_6(b, l + 1);
    r = r && EnumDecl_7(b, l + 1);
    r = r && EnumDecl_8(b, l + 1);
    r = r && consumeToken(b, RCURLY);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // DOC_COMMENT*
  private static boolean EnumDecl_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumDecl_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, DOC_COMMENT)) break;
      if (!empty_element_parsed_guard_(b, "EnumDecl_0", c)) break;
    }
    return true;
  }

  // Pragmas?
  private static boolean EnumDecl_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumDecl_1")) return false;
    Pragmas(b, l + 1);
    return true;
  }

  // PRIVATE_KW?
  private static boolean EnumDecl_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumDecl_2")) return false;
    consumeToken(b, PRIVATE_KW);
    return true;
  }

  // EnumField?
  private static boolean EnumDecl_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumDecl_6")) return false;
    EnumField(b, l + 1);
    return true;
  }

  // ((SEMI | COMMA) EnumField)*
  private static boolean EnumDecl_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumDecl_7")) return false;
    while (true) {
      int c = current_position_(b);
      if (!EnumDecl_7_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "EnumDecl_7", c)) break;
    }
    return true;
  }

  // (SEMI | COMMA) EnumField
  private static boolean EnumDecl_7_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumDecl_7_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = EnumDecl_7_0_0(b, l + 1);
    r = r && EnumField(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // SEMI | COMMA
  private static boolean EnumDecl_7_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumDecl_7_0_0")) return false;
    boolean r;
    r = consumeToken(b, SEMI);
    if (!r) r = consumeToken(b, COMMA);
    return r;
  }

  // (SEMI | COMMA)?
  private static boolean EnumDecl_8(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumDecl_8")) return false;
    EnumDecl_8_0(b, l + 1);
    return true;
  }

  // SEMI | COMMA
  private static boolean EnumDecl_8_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumDecl_8_0")) return false;
    boolean r;
    r = consumeToken(b, SEMI);
    if (!r) r = consumeToken(b, COMMA);
    return r;
  }

  /* ********************************************************** */
  // EnumFieldIdent (LPAREN Literal RPAREN)?
  public static boolean EnumField(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumField")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENUM_FIELD, "<enum field>");
    r = EnumFieldIdent(b, l + 1);
    r = r && EnumField_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (LPAREN Literal RPAREN)?
  private static boolean EnumField_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumField_1")) return false;
    EnumField_1_0(b, l + 1);
    return true;
  }

  // LPAREN Literal RPAREN
  private static boolean EnumField_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumField_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && Literal(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IdentOrKeywordOrStrLit
  public static boolean EnumFieldIdent(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumFieldIdent")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENUM_FIELD_IDENT, "<enum field ident>");
    r = IdentOrKeywordOrStrLit(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean EnumIdent(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumIdent")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, ENUM_IDENT, r);
    return r;
  }

  /* ********************************************************** */
  // Expression SEMI
  public static boolean ExprStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExprStmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_STMT, "<expr stmt>");
    r = Expression(b, l + 1);
    r = r && consumeToken(b, SEMI);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
